%% Data model (ER) of the DEPLOYED build. Edit freely. The runnable DDL is in schema.sql,
%% extracted from apps/api/migrations and the API's boot-time DDL (services/postgres.py).
%% Convention: aggregates are JSONB documents keyed per workspace; the pydantic model
%% named in the attribute comment is the schema of the payload.
erDiagram
    WORKSPACES ||--o{ PROFILES : "has users"
    WORKSPACES ||--o{ USER_ROLES : "grants viewer | editor | admin"
    WORKSPACES ||--o{ CLARA_SIGNALS : owns
    WORKSPACES ||--o{ CLARA_THEME_INSIGHTS : owns
    WORKSPACES ||--o{ CLARA_PROBLEMS : owns
    WORKSPACES ||--o{ CLARA_LEARNINGS : owns
    WORKSPACES ||--o{ TAXONOMY_NODES : owns
    WORKSPACES ||--o{ CLARA_TELEMETRY : logs

    CLARA_SIGNALS }o--o{ TAXONOMY_NODES : "SIGNAL_NODE_MAP"
    TAXONOMY_NODES ||--o{ TAXONOMY_NODES : "parent of (3 levels)"
    CLARA_SIGNALS }o--o{ CLARA_THEME_INSIGHTS : "clustered by tag (evidence ids)"
    CLARA_THEME_INSIGHTS |o--o| CLARA_PROBLEMS : "accepted candidate becomes"
    CLARA_PROBLEMS ||--o{ CLARA_WORKFLOW_RECORDS : "approval · execution · outcome · guardrail · closure · learning_conclusion"
    CLARA_PROBLEMS ||--o{ CLARA_MEASUREMENT_PLANS : "t7 · window · followup"
    CLARA_WORKFLOW_RECORDS ||--o| CLARA_LEARNINGS : "reviewed conclusion copied into memory"
    CLARA_LEARNINGS }o..o{ CLARA_THEME_INSIGHTS : "retrieved into synthesis (decayed confidence)"

    CLARA_SIGNALS {
        bigint workspace_id PK
        text signal_id PK
        jsonb payload "SignalRecord: feedback_text, source, journey, journey_stage, language, timestamp, sentiment, urgency, tags, enriched"
    }
    CLARA_THEME_INSIGHTS {
        bigint workspace_id PK
        text theme_tag PK
        jsonb payload "insight: title, summary, cross-signal severity, evidence signal ids, suggested actions"
    }
    CLARA_PROBLEMS {
        bigint workspace_id PK
        text problem_id PK
        jsonb payload "ProblemRecord: outcome_contract (DP1), action_proposals[risk_level, approval state], governance_checks, evidence, origin, due_at"
    }
    CLARA_WORKFLOW_RECORDS {
        text tenant_id PK
        text record_type PK
        text record_id PK
        text problem_id FK
        jsonb payload "ApprovalDecision | ExecutionRecord | OutcomeMeasurement(measurement_source) | GuardrailMeasurement | ClosureRecord | LearningConclusionRecord"
        timestamptz retention_expires_at
    }
    CLARA_MEASUREMENT_PLANS {
        bigint id PK
        bigint workspace_id FK
        text problem_id FK
        text execution_id
        text kind "t7 | window | followup"
        text due_at
        text status
    }
    CLARA_LEARNINGS {
        bigint workspace_id PK
        text conclusion_id PK
        text topic
        jsonb payload "learning_status, summary, limitations, reviewer, base_confidence, half_life_days, last_validated_at (DP2, decay computed on read)"
    }
    TAXONOMY_NODES {
        uuid id PK
        int workspace_id FK
        uuid parent_id FK
        int level
        text name
        text status "active | candidate | merged | archived"
        numeric confidence
        vector embedding "1024 dims"
    }
    CLARA_TELEMETRY {
        bigint id PK
        bigint workspace_id FK
        text event_type
        jsonb metadata
        timestamptz created_at
    }
    WORKSPACES {
        int id PK
        text slug
        jsonb settings
    }
    PROFILES {
        uuid user_id PK
        int workspace_id FK
        text email
    }
    USER_ROLES {
        uuid user_id PK
        int workspace_id FK
        text role
    }
